<resources>
    <string name="app_name">Android-Task-2</string>
    <string name="conjunction">Conjunction (AND)</string>
    <string name="P">P</string>
    <string name="Q">Q</string>
    <string name="T">T</string>
    <string name="F">F</string>
    <string name="proposition">P ^ Q</string>
    <string name="answer_hint">T/F</string>
    <string name="submit">Submit</string>
    <string name="answers_correct">You got %d answers correct!</string>
</resources>